src/objects/FAM__Applied_Depreciation_Method__c.object
<CustomObject>
    <customHelpPage>FAM__AppliedDepreciationMethodHelp</customHelpPage>
    <description>Contains records of the depreciation methods applied to depreciation books. Each record contains the depreciation book, depreciation method applied and the date on which that method came into effect.</description>
    <fields>
        <fullName>FAM__Depreciation_Book__c</fullName>
        <description>Lookup to the depreciation book to which the depreciation method applies.</description>
        <inlineHelpText>Lookup to the depreciation book to which the depreciation method applies.</inlineHelpText>
        <label>Depreciation Book</label>
        <referenceTo>FAM__Depreciation_Book__c</referenceTo>
        <relationshipLabel>Applied Depreciation Methods</relationshipLabel>
        <relationshipName>Applied_Depreciation_Methods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FAM__Depreciation_Formula__c</fullName>
        <description>Visual representation of the applied depreciation formula for the chosen depreciation method.</description>
        <formula>IF(FAM__Depreciation_Method__r.FAM__Formula_URL__c != &apos;&apos;, IMAGE(FAM__Depreciation_Method__r.FAM__Formula_URL__c , FAM__Depreciation_Method__r.Name),&apos;&apos;)</formula>
        <inlineHelpText>Visual representation of the applied depreciation formula for the chosen depreciation method.</inlineHelpText>
        <label>Depreciation Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Depreciation_Method__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the depreciation method applied to the depreciation book.</description>
        <inlineHelpText>Lookup to the depreciation method applied to the depreciation book.</inlineHelpText>
        <label>Depreciation Method</label>
        <referenceTo>FAM__FA_Depreciation_Method__c</referenceTo>
        <relationshipLabel>Applied Depreciation Methods</relationshipLabel>
        <relationshipName>Applied_Depreciation_Methods</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__Effective_Date__c</fullName>
        <description>Date from which the Depreciation method is applied on the tax book.</description>
        <inlineHelpText>Date from which the Depreciation method is applied on the tax book.</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Applied Depreciation Method</label>
    <listViews>
        <fullName>FAM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DM-{0000000}</displayFormat>
        <label>Applied Depreciation Method</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Depreciation Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>